# meek-project

./: README.md
demo-android/: build.ps1  build.sh  main.c
meek-compositor/: CMakeLists.txt  build.sh  deploy.bat  deploy.sh
meek-compositor/protocols/: meek-shell-v1.xml
meek-compositor/scripts/: kill-sxmo.sh  run-meek-gated.sh  run-meek.sh
meek-compositor/src/: egl_ctx.c  egl_ctx.h  fractional_scale.c  fractional_scale.h  globals.c  globals.h  input.c  input.h  linux_dmabuf.c  linux_dmabuf.h  main.c  meek_shell_v1.c  meek_shell_v1.h  output_drm.c  output_drm.h  output_x11.c  output_x11.h  seat.c  seat.h  surface.c  surface.h  text_input_v3.c  text_input_v3.h  types.h  viewporter.c  viewporter.h  xdg_shell.c  xdg_shell.h
meek-compositor/src/clib/: clib.c  clib.h  clib_rwlock.h  memory_manager.h  purelib.c  purelib.h  stdlib.h
meek-shell/: CMakeLists.txt  build.sh  meek.bat  sync-to-phone.sh
meek-shell/demo-settings/: build.sh  main.c
meek-shell/demo-settings/assets/: main.style  main.ui
meek-shell/scripts/: with-drm.sh
meek-shell/src/: app_registry.c  app_registry.h  card_drag.c  card_drag.h  debug_definitions.h  gesture_recognizer.c  gesture_recognizer.h  gui_api.h  icon_color_sampler.c  icon_color_sampler.h  icon_resolver.c  icon_resolver.h  main.c  meek_shell_v1_client.c  meek_shell_v1_client.h  settings.c  settings.h  toplevel_registry.c  toplevel_registry.h  types.h
meek-shell/src/clib/: clib.c  clib.h  clib_rwlock.c  clib_rwlock.h  memory_manager.c  memory_manager.h  purelib.c  purelib.h  stdlib.c  stdlib.h
meek-shell/views/: shell.style  shell.ui
meek-ui/: build_test_runner.bat
meek-ui/demo-android/: AndroidManifest.xml.template  README.md  build.bat
meek-ui/demo-linux-drm/: CMakeLists.txt  README.md  build.sh  main.c
meek-ui/demo-linux-wayland/: CMakeLists.txt  build.sh  main.c
meek-ui/demo-linux-x11/: CMakeLists.txt  README.md  build.sh  main.c
meek-ui/demo-macos/: README.md  build.sh  main.c
meek-ui/demo-windows/: CMakeLists.txt  main.c  main.style
meek-ui/demo-windows-code/: CMakeLists.txt  main.c
meek-ui/gui/: CMakeLists.txt
meek-ui/gui/src/: animator.c  animator.h  canvas.h  debug_definitions.h  font.c  font.h  fs.h  gui.h  gui_api.h  hot_reload.c  hot_reload.h  parser_style.c  parser_style.h  parser_xml.c  parser_xml.h  platform.h  renderer.h  scene.c  scene.h  scene_input.c  scene_input.h  scene_layout.c  scene_render.c  scene_render.h  scene_style.c  scene_style.h  scroll.c  scroll.h  types.h  widget.h  widget_registry.c  widget_registry.h
meek-ui/gui/src/clib/: clib_rwlock.c  memory_manager.c  memory_manager.h  stdlib.c
meek-ui/gui/src/renderers/: _visual_contract.h  d3d11_renderer.c  d3d12_renderer.c  d3d9_renderer.c  gl_funcs.h  gles3_renderer.c  opengl3_renderer.c  vulkan_renderer.c
meek-ui/gui/src/widgets/: widget_button.c  widget_canvas.c  widget_checkbox.c  widget_collection.c  widget_colorpicker.c  widget_column.c  widget_div.c  widget_image.c  widget_image_cache.h  widget_input.c  widget_keyboard.c  widget_option.c  widget_popup.c  widget_process_window.c  widget_process_window.h  widget_radio.c  widget_row.c  widget_select.c  widget_slider.c  widget_text.c  widget_textarea.c  widget_window.c
